# W3-RAG-documentation-types

./: README.md  rag-all-types.html  rag_w3_animated_arrows.html
langchain-rag-types/: 01_naive_rag.py  02_advanced_rag.py  03_modular_rag.py  04_self_rag.py  05_corrective_rag.py  06_fusion_rag.py  07_speculative_rag.py  08_agentic_rag.py  09_graph_rag.py  main.py  pyproject.toml  shared_setup.py
